[gd_scene load_steps=18 format=2]

[ext_resource path="res://actor_framework/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor_states/Sequence.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/direwolf/weapons/DirewolfFakeout.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor_states/ai_states/MoveTo.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/direwolf/weapons/DirewolfCharge.tscn" type="PackedScene" id=5]
[ext_resource path="res://actor_states/ai_states/AIAttack.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/direwolf/DirewolfStateMachine.gd" type="Script" id=7]
[ext_resource path="res://actor_states/motion/Stagger.tscn" type="PackedScene" id=8]
[ext_resource path="res://actor_states/motion/Die.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/direwolf/DirewolfPivot.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/direwolf/Direwolf.tres" type="Resource" id=11]
[ext_resource path="res://actor_states/ai_states/WaitTime.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/direwolf/weapons/DirewolfSlash.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/direwolf/weapons/DirewolfJumpBack.tscn" type="PackedScene" id=14]
[ext_resource path="res://actors/direwolf/weapons/DirewolfRunToKamikazeSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://actors/direwolf/weapons/DirewolfKamikaze2ExplosionSpawner.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 163.364
height = 0.0

[node name="Direwolf" groups=[
"enemies",
] instance=ExtResource( 1 )]
pause_offscreen = false

[node name="Pivot" parent="." index="0" instance=ExtResource( 10 )]

[node name="StateMachine" parent="." index="1"]
script = ExtResource( 7 )
attack_distance = 1400.0
run_distance = 1600.0

[node name="WalkSequence" parent="StateMachine" index="0" instance=ExtResource( 2 )]

[node name="WaitTime" parent="StateMachine/WalkSequence" index="0" instance=ExtResource( 12 )]
stagger_state = ""
duration = 0.01

[node name="MoveTo" parent="StateMachine/WalkSequence" index="1" instance=ExtResource( 4 )]
max_roam_radius = 200.0

[node name="MotionSteering" parent="StateMachine/WalkSequence/MoveTo/Motion" index="1"]
max_speed = 1337.0

[node name="Timer" parent="StateMachine/WalkSequence/MoveTo" index="1"]
wait_time = 0.2

[node name="RunSequence" parent="StateMachine" index="1" instance=ExtResource( 2 )]

[node name="MoveTo" parent="StateMachine/RunSequence" index="0" instance=ExtResource( 4 )]
animation = "run"
max_roam_radius = 0.0
arrive_distance = 900.0

[node name="MotionSteering" parent="StateMachine/RunSequence/MoveTo/Motion" index="1"]
max_speed = 2000.0

[node name="Timer" parent="StateMachine/RunSequence/MoveTo" index="1"]
wait_time = 0.2

[node name="JumpBackSequence" parent="StateMachine" index="2" instance=ExtResource( 2 )]
next_state = "RunToKamikazeSequence"

[node name="JumpBack" parent="StateMachine/JumpBackSequence" index="0" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 14 ) ]
stagger = false

[node name="ChargeSequence" parent="StateMachine" index="3" instance=ExtResource( 2 )]
next_state = "SlashSequence"

[node name="PrepSequence" parent="StateMachine/ChargeSequence" index="0" instance=ExtResource( 2 )]

[node name="WaitTime" parent="StateMachine/ChargeSequence/PrepSequence" index="0" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="Fakeout" parent="StateMachine/ChargeSequence/PrepSequence" index="1" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 3 ) ]
stagger = false

[node name="WaitTime" parent="StateMachine/ChargeSequence" index="1" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="Charge" parent="StateMachine/ChargeSequence" index="2" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 5 ) ]
stagger = false

[node name="RunToKamikazeSequence" parent="StateMachine" index="4" instance=ExtResource( 2 )]
next_state = "SlashSequence"

[node name="WaitTime" parent="StateMachine/RunToKamikazeSequence" index="0" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="DirewolfRunToKamikaze" parent="StateMachine/RunToKamikazeSequence" index="1" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 15 ) ]
stagger = false

[node name="DirewolfKamikaze2ExplosionSpawner" parent="StateMachine/RunToKamikazeSequence" index="2" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 16 ) ]
stagger = false

[node name="SlashSequence" parent="StateMachine" index="5" instance=ExtResource( 2 )]

[node name="PrepSequence" parent="StateMachine/SlashSequence" index="0" instance=ExtResource( 2 )]

[node name="WaitTime" parent="StateMachine/SlashSequence/PrepSequence" index="0" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="Fakeout" parent="StateMachine/SlashSequence/PrepSequence" index="1" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 3 ) ]
stagger = false

[node name="WaitTime" parent="StateMachine/SlashSequence" index="1" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""

[node name="Slash" parent="StateMachine/SlashSequence" index="2" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 13 ) ]
stagger = false

[node name="StaggerTime" parent="StateMachine/SlashSequence" index="3" instance=ExtResource( 12 )]
duration = 0.2

[node name="FakeoutSequence" parent="StateMachine" index="6" instance=ExtResource( 2 )]
next_state = "SlashSequence"

[node name="WaitTime" parent="StateMachine/FakeoutSequence" index="0" instance=ExtResource( 12 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="Fakeout" parent="StateMachine/FakeoutSequence" index="1" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 3 ) ]
stagger = false

[node name="Stagger" parent="StateMachine" index="7" instance=ExtResource( 8 )]
revenge_threshold = 5.0
revenge_state = "JumpBackSequence"

[node name="Die" parent="StateMachine" index="8" instance=ExtResource( 9 )]

[node name="CollisionBox" parent="." index="2"]
position = Vector2( -3.36357, -160 )
shape = SubResource( 1 )

[node name="ActorInterface" parent="." index="3"]
visible = true

[node name="Stats" parent="." index="5"]
character_stats = ExtResource( 11 )

[editable path="StateMachine/WalkSequence/MoveTo"]

[editable path="StateMachine/WalkSequence/MoveTo/Motion"]

[editable path="StateMachine/RunSequence/MoveTo"]

[editable path="StateMachine/RunSequence/MoveTo/Motion"]
